syntax = "proto3";

option csharp_namespace = "GrpcService";

package product;

service ServicesProduct {
  rpc SendProduct (ProductRequest) returns (ProductReply);
}

message ProductRequest {
  int32 id = 1;
}

message Product {
  int32 id = 1;
  string name = 2;
  float price = 3;
}

message ProductReply {
  Product product = 1;
}
